# pose-nudge

./: .all-contributorsrc  .release-please-config.json  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.tr.md  README.ko.md  README.md  README.tr.md  index.html  package-lock.json  package.json
.github/workflows/: release-please.yml  release.yml
docs/: ONEPOSTURE_PRODUCT_PLAN.md
locales/: en.json  ja.json  ko.json  tr.json  zh-Hant.json  zh.json
scripts/: check-localization.mjs
src/: App.css  App.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: licensing.rs  main.rs  pose_analysis.rs  reminder.rs
src/components/: AboutPage.tsx  Dashboard.tsx  ReminderSurface.tsx  SettingsPage.tsx  WebcamCapture.tsx
src/components/ui/: dialog.tsx  select.tsx  switch.tsx
src/lib/: db.ts  licensing.ts  monitoring.ts  preferences.ts  reminders.ts
src/locales/en/: translation.json
src/locales/ja/: translation.json
src/locales/ko/: translation.json
src/locales/tr/: translation.json
src/locales/zh/: translation.json
src/locales/zh-Hant/: translation.json
