[package]
name = "pose-nudge"
version = "1.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pose_nudge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-notification = "2.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
image = "0.25.9"
base64 = "0.22.1"
ort = { version = "2.0.0-rc.11", features = ["download-binaries"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
anyhow = "1.0"
log = "0.4.29"
tauri-plugin-log = { version = "2.8.0", features = ["colored"] }
env_logger = "0.11.8"
dirs = "6.0.0"
chrono = { version = "0.4.44", features = ["serde"] }
parking_lot = "0.12.5"
imageproc = "0.26.0"
thiserror = "2.0.18" # 에러 처리를 위해 추가
tauri-plugin-store = "2.4.2"
tauri-plugin-fs = "2.4.5"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-os = "2.3.2"
nokhwa = { version = "0.10.10", features = ["input-native", "output-threaded"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "2.10.0"
