[package]
name = "oneposture"
version = "2.2.1"
description = "A privacy-first posture companion with reliable reminders"
authors = ["One Apps Studio", "Pose Nudge contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = ["macos-private-api", "protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-notification = "2.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
image = "0.25.9"
base64 = "0.22.1"
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
anyhow = "1.0"
log = "0.4.29"
tauri-plugin-log = { version = "2.8.0", features = ["colored"] }
chrono = { version = "0.4.44", features = ["serde"] }
parking_lot = "0.12.5"
tauri-plugin-store = "2.4.2"
tauri-plugin-fs = "2.4.5"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-os = "2.3.2"
nokhwa = { version = "0.10.10", features = ["input-native", "output-threaded"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
ed25519-dalek = "2.2.0"
uuid = { version = "1.21.0", features = ["v4"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "2.10.0"
